Bug 113445 - Sections inside tables: lack of rendered content due to loop control
Summary: Sections inside tables: lack of rendered content due to loop control
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks: Writer-Tables
  Show dependency treegraph
 
Reported: 2017-10-25 14:17 UTC by Miklos Vajna
Modified: 2017-11-03 22:22 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer document. (28.80 KB, application/vnd.oasis.opendocument.text-flat-xml)
2017-10-25 14:17 UTC, Miklos Vajna
Details
How it looks like currently. (17.52 KB, image/png)
2017-10-25 14:19 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2017-10-25 14:17:54 UTC
Created attachment 137283 [details]
Reproducer document.

Steps to reproduce:

1) Open the attached bugdoc.
2) Make sure the LibreOffice window is large enough, so that page 2 is on the right hand side of page 1, not below. If necessary, enable multi-page view on the toolbar.
3) Press enter while the cursor is at the start of the document.

Expected: The (nested) table has 1 less rows on page 1, and 1 more rows on page 2.

Actual: Table2:C5 and Table2:D5 is no longer painted.

This seems to be different to the other section vs table bugs I fixed in the near past, this one is a problem we inherited from OOo, not a master-only regression.
Comment 1 Miklos Vajna 2017-10-25 14:19:09 UTC
Created attachment 137284 [details]
How it looks like currently.
Comment 2 Commit Notification 2017-10-26 07:05:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb8b20ab3aa3f790d4979385874cdd4e2a87221b

tdf#113445 sw: avoid hitting loop control with a dozen of in-table sections

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.